--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
-        "@inertiajs/progress": "^0.2.7"
+        "@inertiajs/progress": "^0.2.7",
+        "@vueuse/core": "^13.0.0"
     }
 }
