--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     },
     "dependencies": {
         "@inertiajs/progress": "^0.2.7",
-        "@vueuse/core": "^13.0.0",
-        "daisyui": "^5.0.16"
+        "@vueuse/core": "^13.0.0"
     }
 }
