--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "singlequote/laravel-webdav": "^1.1",
         "spatie/laravel-welcome-notification": "^2.4",
         "tightenco/ziggy": "^2.0"
     },
