--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "devDependencies": {
         "@inertiajs/vue3": "^2.0.0",
         "@tailwindcss/forms": "^0.5.3",
+        "@types/dropzone": "^5.7.9",
         "@vitejs/plugin-vue": "^5.0.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.7.4",
@@ -20,6 +21,7 @@
     },
     "dependencies": {
         "@inertiajs/progress": "^0.2.7",
-        "@vueuse/core": "^13.0.0"
+        "@vueuse/core": "^13.0.0",
+        "dropzone": "^6.0.0-beta.2"
     }
 }
