--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     },
     "dependencies": {
         "@inertiajs/progress": "^0.2.7",
-        "@vueuse/core": "^13.0.0",
-        "dropzone": "^6.0.0-beta.2"
+        "@vueuse/core": "^13.0.0"
     }
 }
